# geo-aware-startup-idea-validator-crew

./: README.md
demo_crew/: README.md  pyproject.toml
demo_crew/src/demo_crew/: crew.py  main.py
